# fov_evaluator

./: .gitignore  README.md  fov20_estimated_attitudes.csv  fov30_estimated_attitudes.csv  fov45_estimated_attitudes.csv  pyproject.toml  synthetic_attitudes.csv
src/fov_evaluator/: __init__.py  __main__.py  api.py  cli_adapter.py  config.py  generate.py  runner.py
src/fov_evaluator/lost/: .gitignore  attitudes.csv
