[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fov-evaluator"
version = "0.1"

[project.optional-dependencies]
dev = ["mypy >= 1.19.1", "ruff >= 0.15.0"]

[project.scripts]
run = "fov_evaluator:main"

[tool.setuptools.package-data]
"fov_evaluator.lost" = ["lost", "bright-star-catalog.tsv"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "Q000",
    "Q001",
    "Q002",
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "D300",
    "D413",
    "COM812",
    "FIX",
    "TD",
    "TRY003",
    "EM102",
    "T201",
    "ERA001",
    "PLR2004",
    "EM101",
    "B904",
]
